--- a/SRM_Complain/package.json
+++ b/SRM_Complain/package.json
@@ -1,10 +1,11 @@
 {
-    "name": "SRM_Complain",
-    "version": "0.0.1",
-    "main": "server.js",
-    "dependencies": {
-        "express": "^4.8.7",
-        "mysql":"^2.5.5",
-        "body-parser":"^1.12.0"
-    }
+  "name": "SRM_Complain",
+  "version": "0.0.1",
+  "main": "server.js",
+  "dependencies": {
+    "body-parser": "^1.12.0",
+    "cors": "^2.7.1",
+    "express": "^4.8.7",
+    "mysql": "^2.5.5"
+  }
 }
